bug fix for book pop up on mobile view

--- a/scss/_book.scss
+++ b/scss/_book.scss
@@ -9,6 +9,8 @@
 	z-index: 100;
 	visibility: hidden;
 	position: fixed;
+	overflow: scroll;
+
 
 	&.book-pop {
 		transition: all 0.4s ease-in;
@@ -119,6 +121,7 @@
 
 @media only screen and (max-width: 400px) {
 	.book-pop-up {
-		position: absolute;
+		// position: absolute;
+		overflow: scroll;
 	}
 }
